crates/ars-components/src/selection/tags_input/snapshots/ars_components__selection__tags_input__tests__snapshot_tag_edit_hidden.snap
---
source: crates/ars-components/src/selection/tags_input/mod.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).tag_edit_attrs(0))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-hidden",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "tag-edit",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "tags-input",
            ),
        ),
        (
            Id,
            String(
                "tags-tag-edit-input-0",
            ),
        ),
        (
            Type,
            String(
                "text",
            ),
        ),
    ],
    styles: [],
}
